// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryNav > snapshots > drilled level snapshot 1`] = `
<div>
  <aside
    class="categoryNav"
  >
    <div
      class="categoryNav__header"
    >
      <h2
        class="categoryNav__headerTitle"
      >
        Categories
      </h2>
      <div
        class="categoryNav__headerActions"
      />
    </div>
    <nav
      aria-label="Category breadcrumb"
      class="categoryNav__breadcrumb"
    >
      <button
        aria-label="Navigate to All"
        class="categoryNav__breadcrumb-link"
        type="button"
      >
        All
      </button>
      <span
        aria-hidden="true"
        class="categoryNav__breadcrumb-sep"
      >
        ›
      </span>
      <span
        class="categoryNav__breadcrumb-current"
      >
        Rangefinders
      </span>
    </nav>
    <div
      class="categoryNav__list"
    >
      <button
        aria-label="Go back"
        class="categoryNav__back"
        type="button"
      >
        ← Back
      </button>
      <div
        class="categoryNav__row categoryNav__row--active"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="categoryNav__dot"
          style="background-color: rgb(199, 125, 74);"
        />
        <div
          class="categoryNav__rowContent"
        >
          <span
            class="categoryNav__name"
          >
            All 
            Rangefinders
          </span>
        </div>
      </div>
      <div
        class="categoryNav__row"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="categoryNav__dot"
          style="background-color: rgb(199, 125, 74);"
        />
        <div
          class="categoryNav__rowContent"
        >
          <span
            class="categoryNav__name"
          >
            35mm Film
          </span>
          <span
            class="categoryNav__count"
          >
            (
            1
            )
          </span>
        </div>
        <span
          aria-hidden="true"
          class="categoryNav__chevron"
        >
          ›
        </span>
      </div>
      <div
        class="categoryNav__row"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="categoryNav__dot"
          style="background-color: rgb(199, 125, 74);"
        />
        <div
          class="categoryNav__rowContent"
        >
          <span
            class="categoryNav__name"
          >
            Medium Format
          </span>
        </div>
      </div>
    </div>
  </aside>
</div>
`;

exports[`CategoryNav > snapshots > root level snapshot 1`] = `
<div>
  <aside
    class="categoryNav"
  >
    <div
      class="categoryNav__header"
    >
      <h2
        class="categoryNav__headerTitle"
      >
        Categories
      </h2>
      <div
        class="categoryNav__headerActions"
      />
    </div>
    <div
      class="categoryNav__list"
    >
      <div
        class="categoryNav__row"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="categoryNav__dot"
          style="background-color: rgb(199, 125, 74);"
        />
        <div
          class="categoryNav__rowContent"
        >
          <span
            class="categoryNav__name"
          >
            Rangefinders
          </span>
          <span
            class="categoryNav__count"
          >
            (
            2
            )
          </span>
        </div>
        <span
          aria-hidden="true"
          class="categoryNav__chevron"
        >
          ›
        </span>
      </div>
      <div
        class="categoryNav__row"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="categoryNav__dot"
          style="background-color: rgb(107, 143, 113);"
        />
        <div
          class="categoryNav__rowContent"
        >
          <span
            class="categoryNav__name"
          >
            SLR Cameras
          </span>
        </div>
      </div>
    </div>
  </aside>
</div>
`;
